--- a/app/src/main/res/layout/layout_e05.xml
+++ b/app/src/main/res/layout/layout_e05.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:padding="16dp"
         android:text="@string/app_name"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp" />
-
+    
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
