--- a/app/src/main/res/layout/activity_e06_jsonobject.xml
+++ b/app/src/main/res/layout/activity_e06_jsonobject.xml
@@ -2,9 +2,10 @@
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".E06JSONObject">
+    tools:context="ir.alikro.session8.E06JSONObject">
 
 
     <androidx.recyclerview.widget.RecyclerView
